--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title></title>
+  <title>Etch-a-Sketch</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="style.css" rel="stylesheet">
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <span class="heading">MAGIC <span class="main">Etch A Sketch</span> SCREEN</span>
   <div class="grid">
 
   </div>
