Cleans up javascript code
No change in functionality in this commit.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 </head>
 
 <body>
+  <div class="buttons">
+    <button type="button">Eraser</button>
+    <button type="button">Clear Grid</button>
+    <button type="button">Lighten</button>
+    <button type="button">Darken</button>
+
+  </div>
   <span class="heading">MAGIC <span class="main">Etch A Sketch</span> SCREEN</span>
   <div class="grid">
 
