--- a/index.html
+++ b/index.html
@@ -10,16 +10,32 @@
 </head>
 
 <body>
-  <div class="buttons">
-    <button type="button">Eraser</button>
-    <button type="button">Clear Grid</button>
-    <button type="button">Lighten</button>
-    <button type="button">Darken</button>
+  <div class="header">
+    <div class="top-settings">
+      <div class="resolution">
+        <span class="current-setting">Set Resolution</span>
+        <button type="button" class="red set-resolution">Set Resolution</button>
+      </div>
+      <div class="color">
 
+        <label for="pick-color">Pick Pen Color</label>
+        <input type="color" class="pick-color" name="pick-color" value="#443f40">
+      </div>
+      <div class="shader">
+        <span class="current-setting">Pick Shader</span>
+        <button type="button" class="red lighten">Lighten</button>
+        <button type="button" class="red darken">Darken</button>
+      </div>
+
+    </div>
   </div>
+  <div class="seperator"></div>
   <span class="heading">MAGIC <span class="main">Etch A Sketch</span> SCREEN</span>
-  <div class="grid">
-
+  <!-- will populate this grid with js, based on user settings -->
+  <div class="grid"></div>
+  <div class="footer">
+    <button type="button" class="spinner spinner-left">Eraser</button>
+    <button type="button" class="spinner spinner-right">Clear Grid</button>
   </div>
 </body>
 
