Adds working color changer
Select a pen color using a standard html color input.

Pen will not overwrite previously drawn pixels, by design.

Pen will shade pixels from whatever the pixel's default pen color was *when set* to black over 10 iterations.

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <div class="top-settings">
       <div class="resolution">
         <span class="current-setting">Set Resolution</span>
-        <button type="button" class="red set-resolution">Set Resolution</button>
+        <button type="button" class="red set-resolution">Current Resolution: 16px</button>
       </div>
       <div class="color">
-
         <label for="pick-color">Pick Pen Color</label>
         <input type="color" class="pick-color" name="pick-color" value="#443f40">
+        <button type="button" class="red random-color">Rainbow! 🌈</button>
       </div>
       <div class="shader">
         <span class="current-setting">Pick Shader</span>
