Adds 'Clear Grid' functionality
Pressing 'Clear Grid' does not reset the resolution, pen color, or shaders. Only clears the grid.

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
     </div>
   </div>
   <div class="seperator"></div>
-  <span class="heading">MAGIC <span class="main">Etch A Sketch</span> SCREEN</span>
+  <div class="heading">MAGIC <span class="main">Etch A Sketch</span> SCREEN</div>
   <!-- will populate this grid with js, based on user settings -->
   <div class="grid"></div>
   <div class="footer">
-    <button type="button" class="spinner spinner-left">Eraser</button>
-    <button type="button" class="spinner spinner-right">Clear Grid</button>
+    <button type="button" class="spinner spinner-left eraser">Eraser</button>
+    <button type="button" class="spinner spinner-right clear-grid">Clear Grid</button>
   </div>
 </body>
 
