--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="color">
         <label for="pick-color">Pick Pen Color</label>
         <input type="color" class="pick-color" name="pick-color" value="#443f40">
-        <button type="button" class="red random-color">Rainbow! 🌈</button>
+        <button type="button" class="white rainbow-mode">Color Mode</button>
       </div>
       <div class="shader">
         <span class="current-setting">Pick Shader</span>
