Adds 'Eraser Mode' functionality
Clicking the bottom-left 'spinner' will toggle on / off eraser mode.

Prior shader / darken settings will be reverted to when exiting eraser mode.

Erasing a pixel resets it's pixel-draw status, event listeners, and brightness to 100%.

NOTE: There seems to be a minor bug that erases some of the rounded corners sometimes, and they don't come back.
  - Need to look into this.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <!-- will populate this grid with js, based on user settings -->
   <div class="grid"></div>
   <div class="footer">
-    <button type="button" class="spinner spinner-left eraser">Eraser</button>
+    <button type="button" class="spinner spinner-left eraser">Set Eraser Mode</button>
     <button type="button" class="spinner spinner-right clear-grid">Clear Grid</button>
   </div>
 </body>
