Adds sparkle mode!
Adds a sparkle effect to each pixel when activated.

There's still a bug related to font sizing for high resolution grids.
-Will be fixed in future release.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
           <span class="tooltiptext bottom">Keyboard: R</span>
           <button type="button" class="red rainbow-mode">Rainbow! 🌈</button>
         </div>
+        <div class="tooltip">
+          <span class="tooltiptext bottom">Keyboard: R</span>
+          <button type="button" class="red sparkle-mode">Sparkle! ✨</button>
+        </div>
+
       </div>
       <div class="shader">
         <span class="sub-heading">Pick Shader</span>
